--- a/es.po
+++ b/es.po
@@ -1,7 +1,7 @@
 #
 # $Id$
 #
-#    Copyright (C) 2007 Alberto MontaÃ±ola Lacort
+#    Copyright (C) 2007 Alberto Montañola Lacort
 #    See the file AUTHORS for more info
 #
 #    This program is free software; you can redistribute it and/or modify
@@ -24,18 +24,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: $Id$\n"
-"Report-Msgid-Bugs-To: alberto+sudoku@almlys.org\n"
-"POT-Creation-Date: 2007-01-09 02:13+0100\n"
-"PO-Revision-Date: 2007-01-09 02:50+0100\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2007-01-09 03:07+0100\n"
+"PO-Revision-Date: 2007-01-09 03:05+0100\n"
 "Last-Translator: Alberto Montañola Lacort <alberto@almlys.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-
-#: wxSudoku.py:36
-msgid "Al's WxWidgets Python Sudoku"
-msgstr ""
 
 #: tkSudoku.py:222
 msgid "Load"
@@ -68,4 +64,3 @@ msgstr "Fichero de Sudoku no válido"
 #: tkSudoku.py:274
 msgid "No solution has been found."
 msgstr "No se ha encontrado ninguna solución"
-
