--- a/ca.po
+++ b/ca.po
@@ -25,13 +25,115 @@ msgid ""
 msgstr ""
 "Project-Id-Version: $Id$\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-09 03:07+0100\n"
-"PO-Revision-Date: 2007-01-09 02:49+0100\n"
+"POT-Creation-Date: 2007-01-10 00:56+0100\n"
+"PO-Revision-Date: 2007-01-10 01:01+0100\n"
 "Last-Translator: Alberto Montañola Lacort <alberto@almlys.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: wxSudoku.py:68
+msgid "&New..."
+msgstr "&Nou..."
+
+#: wxSudoku.py:68
+msgid "Creates a New Sudoku"
+msgstr "Crea un nou Sudoku"
+
+#: wxSudoku.py:73
+msgid "&Open..."
+msgstr "&Obrir..."
+
+#: wxSudoku.py:73
+msgid "Opens a Sudoku"
+msgstr "Obre un Sudoku"
+
+#: wxSudoku.py:82
+#, fuzzy
+msgid "&Exit"
+msgstr "&Sortir"
+
+#: wxSudoku.py:82
+msgid "The application terminates"
+msgstr "La aplicació termina"
+
+#: wxSudoku.py:87
+msgid "&File"
+msgstr "&Fitxer"
+
+#: wxSudoku.py:91
+msgid "&Solve"
+msgstr "&Solucionar"
+
+#: wxSudoku.py:91
+msgid "Solves the Sudoku (I thought that you were smart!)"
+msgstr "Soluciona el Sudoku"
+
+#: wxSudoku.py:95
+msgid "&Undo"
+msgstr "&Desfer"
+
+#: wxSudoku.py:95
+msgid "Goes back to the past, well, it undoes your latest mess"
+msgstr "Desfà l'última acció"
+
+#: wxSudoku.py:101
+msgid "&Redo"
+msgstr "&Refer"
+
+#: wxSudoku.py:101
+msgid "Redoes your latest undo"
+msgstr "Refà l'última acció desfeta"
+
+#: wxSudoku.py:107
+msgid "&Sudoku"
+msgstr "&Sudoku"
+
+#: wxSudoku.py:111
+msgid "&Show Hints"
+msgstr "&Mostrar pistes"
+
+#: wxSudoku.py:111
+msgid "It shows you some helpful information"
+msgstr "Mostra informació molt útil"
+
+#: wxSudoku.py:117
+#, python-format
+msgid "Changes your app language to %s"
+msgstr "Canvia l'idioma de l'aplicació a %s"
+
+#: wxSudoku.py:121
+msgid "&Change Language"
+msgstr "&Canviar Idioma"
+
+#: wxSudoku.py:121
+msgid "It allows you to change the language"
+msgstr "Et permet canviar l'idioma"
+
+#: wxSudoku.py:122
+msgid "&Options"
+msgstr "&Opcions"
+
+#: wxSudoku.py:133
+msgid "Are you really sure that you wish to quit?"
+msgstr "Esteu completament segurs de que voleu sortir?"
+
+#: wxSudoku.py:133
+msgid "Are you sure?"
+msgstr "Esteu segur de la seva decisió?"
+
+#: wxSudoku.py:200
+msgid "English"
+msgstr "Anglès"
+
+#: wxSudoku.py:200
+msgid "Spanish"
+msgstr "Espanyol"
+
+#: wxSudoku.py:200
+msgid "Catalan"
+msgstr "Català"
 
 #: tkSudoku.py:222
 msgid "Load"
@@ -64,3 +166,4 @@ msgstr "Fitxers Sudoku invalid"
 #: tkSudoku.py:274
 msgid "No solution has been found."
 msgstr "No s'ha trobat cap solució"
+
