--- a/es.po
+++ b/es.po
@@ -25,13 +25,115 @@ msgid ""
 msgstr ""
 "Project-Id-Version: $Id$\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-09 03:07+0100\n"
-"PO-Revision-Date: 2007-01-09 03:05+0100\n"
+"POT-Creation-Date: 2007-01-10 00:56+0100\n"
+"PO-Revision-Date: 2007-01-10 01:04+0100\n"
 "Last-Translator: Alberto Montañola Lacort <alberto@almlys.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: wxSudoku.py:68
+msgid "&New..."
+msgstr "&Nuevo..."
+
+#: wxSudoku.py:68
+msgid "Creates a New Sudoku"
+msgstr "Crea un nuevo Sudoku"
+
+#: wxSudoku.py:73
+msgid "&Open..."
+msgstr "&Abrir..."
+
+#: wxSudoku.py:73
+msgid "Opens a Sudoku"
+msgstr "Abre un Sudoku"
+
+#: wxSudoku.py:82
+#, fuzzy
+msgid "&Exit"
+msgstr "&Salir"
+
+#: wxSudoku.py:82
+msgid "The application terminates"
+msgstr "La aplicación termina"
+
+#: wxSudoku.py:87
+msgid "&File"
+msgstr "&Archivo"
+
+#: wxSudoku.py:91
+msgid "&Solve"
+msgstr "&Solucionar"
+
+#: wxSudoku.py:91
+msgid "Solves the Sudoku (I thought that you were smart!)"
+msgstr "Soluciona el Sudoku"
+
+#: wxSudoku.py:95
+msgid "&Undo"
+msgstr "&Deshacer"
+
+#: wxSudoku.py:95
+msgid "Goes back to the past, well, it undoes your latest mess"
+msgstr "Deshace la última acción"
+
+#: wxSudoku.py:101
+msgid "&Redo"
+msgstr "Rehacer"
+
+#: wxSudoku.py:101
+msgid "Redoes your latest undo"
+msgstr "Rehace la última acción deshecha"
+
+#: wxSudoku.py:107
+msgid "&Sudoku"
+msgstr "&Sudoku"
+
+#: wxSudoku.py:111
+msgid "&Show Hints"
+msgstr "&Mostrar Pistas"
+
+#: wxSudoku.py:111
+msgid "It shows you some helpful information"
+msgstr "Muestra información muy útil"
+
+#: wxSudoku.py:117
+#, python-format
+msgid "Changes your app language to %s"
+msgstr "Cambia la aplicación al %s"
+
+#: wxSudoku.py:121
+msgid "&Change Language"
+msgstr "&Cambia el Idioma"
+
+#: wxSudoku.py:121
+msgid "It allows you to change the language"
+msgstr "Te permite cambiar el idioma"
+
+#: wxSudoku.py:122
+msgid "&Options"
+msgstr "&Opciones"
+
+#: wxSudoku.py:133
+msgid "Are you really sure that you wish to quit?"
+msgstr "¿Estas completamente seguro que deseas salir?"
+
+#: wxSudoku.py:133
+msgid "Are you sure?"
+msgstr "¿Está usted seguro?"
+
+#: wxSudoku.py:200
+msgid "English"
+msgstr "Inglés"
+
+#: wxSudoku.py:200
+msgid "Spanish"
+msgstr "Español"
+
+#: wxSudoku.py:200
+msgid "Catalan"
+msgstr "Catalán"
 
 #: tkSudoku.py:222
 msgid "Load"
@@ -64,3 +166,4 @@ msgstr "Fichero de Sudoku no válido"
 #: tkSudoku.py:274
 msgid "No solution has been found."
 msgstr "No se ha encontrado ninguna solución"
+
