--- a/ca.po
+++ b/ca.po
@@ -25,145 +25,230 @@ msgid ""
 msgstr ""
 "Project-Id-Version: $Id$\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-10 00:56+0100\n"
+"POT-Creation-Date: 2007-01-14 16:01+0100\n"
 "PO-Revision-Date: 2007-01-10 01:01+0100\n"
 "Last-Translator: Alberto Montañola Lacort <alberto@almlys.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: wxSudoku.py:68
-msgid "&New..."
-msgstr "&Nou..."
-
-#: wxSudoku.py:68
+#: wxSudoku.py:137
 msgid "Creates a New Sudoku"
 msgstr "Crea un nou Sudoku"
 
-#: wxSudoku.py:73
-msgid "&Open..."
-msgstr "&Obrir..."
-
-#: wxSudoku.py:73
+#: wxSudoku.py:137
 msgid "Opens a Sudoku"
 msgstr "Obre un Sudoku"
 
-#: wxSudoku.py:82
+#: wxSudoku.py:138
 #, fuzzy
-msgid "&Exit"
-msgstr "&Sortir"
+msgid "Saves a Sudoku"
+msgstr "Obre un Sudoku"
 
-#: wxSudoku.py:82
+#: wxSudoku.py:138
 msgid "The application terminates"
 msgstr "La aplicació termina"
 
-#: wxSudoku.py:87
-msgid "&File"
-msgstr "&Fitxer"
-
-#: wxSudoku.py:91
-msgid "&Solve"
-msgstr "&Solucionar"
-
-#: wxSudoku.py:91
+#: wxSudoku.py:139
 msgid "Solves the Sudoku (I thought that you were smart!)"
 msgstr "Soluciona el Sudoku"
 
-#: wxSudoku.py:95
-msgid "&Undo"
-msgstr "&Desfer"
-
-#: wxSudoku.py:95
+#: wxSudoku.py:140
 msgid "Goes back to the past, well, it undoes your latest mess"
 msgstr "Desfà l'última acció"
 
-#: wxSudoku.py:101
-msgid "&Redo"
-msgstr "&Refer"
-
-#: wxSudoku.py:101
+#: wxSudoku.py:141
 msgid "Redoes your latest undo"
 msgstr "Refà l'última acció desfeta"
 
-#: wxSudoku.py:107
-msgid "&Sudoku"
-msgstr "&Sudoku"
-
-#: wxSudoku.py:111
-msgid "&Show Hints"
-msgstr "&Mostrar pistes"
-
-#: wxSudoku.py:111
+#: wxSudoku.py:142
 msgid "It shows you some helpful information"
 msgstr "Mostra informació molt útil"
 
-#: wxSudoku.py:117
+#: wxSudoku.py:143
 #, python-format
 msgid "Changes your app language to %s"
 msgstr "Canvia l'idioma de l'aplicació a %s"
 
-#: wxSudoku.py:121
-msgid "&Change Language"
-msgstr "&Canviar Idioma"
-
-#: wxSudoku.py:121
+#: wxSudoku.py:144
 msgid "It allows you to change the language"
 msgstr "Et permet canviar l'idioma"
 
-#: wxSudoku.py:122
+#: wxSudoku.py:145
+msgid "Shows some documentation of how does work this thing"
+msgstr ""
+
+#: wxSudoku.py:146
+msgid "Checks if you are running the latest version"
+msgstr ""
+
+#: wxSudoku.py:147
+msgid "I need to explain what does this thing do?"
+msgstr ""
+
+#: wxSudoku.py:148
+msgid "Opens a Python Interactive console, It's that cool"
+msgstr ""
+
+#: wxSudoku.py:175
+msgid "&New..."
+msgstr "&Nou..."
+
+#: wxSudoku.py:180
+msgid "&Open..."
+msgstr "&Obrir..."
+
+#: wxSudoku.py:191
+#, fuzzy
+msgid "&Exit"
+msgstr "&Sortir"
+
+#: wxSudoku.py:196
+msgid "&File"
+msgstr "&Fitxer"
+
+#: wxSudoku.py:200
+msgid "&Solve"
+msgstr "&Solucionar"
+
+#: wxSudoku.py:206
+msgid "&Undo"
+msgstr "&Desfer"
+
+#: wxSudoku.py:212
+msgid "&Redo"
+msgstr "&Refer"
+
+#: wxSudoku.py:218
+msgid "&Sudoku"
+msgstr "&Sudoku"
+
+#: wxSudoku.py:222
+msgid "&Show Hints"
+msgstr "&Mostrar pistes"
+
+#: wxSudoku.py:241
+msgid "&Change Language"
+msgstr "&Canviar Idioma"
+
+#: wxSudoku.py:242
 msgid "&Options"
 msgstr "&Opcions"
 
-#: wxSudoku.py:133
-msgid "Are you really sure that you wish to quit?"
-msgstr "Esteu completament segurs de que voleu sortir?"
+#: wxSudoku.py:258
+msgid "&Console..."
+msgstr ""
 
-#: wxSudoku.py:133
-msgid "Are you sure?"
-msgstr "Esteu segur de la seva decisió?"
+#: wxSudoku.py:264
+msgid "&About..."
+msgstr ""
 
-#: wxSudoku.py:200
-msgid "English"
-msgstr "Anglès"
+#: wxSudoku.py:268
+msgid "&Help"
+msgstr ""
 
-#: wxSudoku.py:200
-msgid "Spanish"
-msgstr "Espanyol"
+#: wxSudoku.py:276
+#, fuzzy
+msgid "New..."
+msgstr "&Nou..."
 
-#: wxSudoku.py:200
-msgid "Catalan"
-msgstr "Català"
+#: wxSudoku.py:278
+#, fuzzy
+msgid "Open..."
+msgstr "&Obrir..."
 
-#: tkSudoku.py:222
-msgid "Load"
-msgstr "Obrir"
-
-#: tkSudoku.py:226
+#: wxSudoku.py:283 tkSudoku.py:238
 msgid "Solve"
 msgstr "Solucionar"
 
-#: tkSudoku.py:232
+#: wxSudoku.py:286
+#, fuzzy
+msgid "Undo"
+msgstr "&Desfer"
+
+#: wxSudoku.py:290
+#, fuzzy
+msgid "Redo"
+msgstr "&Refer"
+
+#: wxSudoku.py:295 tkSudoku.py:249
 msgid "Show Hints"
 msgstr "Mostrar pistes"
 
-#: tkSudoku.py:253
+#: wxSudoku.py:324
+msgid "Are you really sure that you wish to quit?"
+msgstr "Esteu completament segurs de que voleu sortir?"
+
+#: wxSudoku.py:324
+msgid "Are you sure?"
+msgstr "Esteu segur de la seva decisió?"
+
+#: wxSudoku.py:361
+#, python-format
+msgid ""
+"\n"
+"Al's WxWidgets Python Sudoku.\n"
+"Another Sudoku solver, written 100%% in Python and wxWidgets.\n"
+"\n"
+"Version: %s\n"
+"\n"
+"Original Author: Copyright (c) 2006 Juan Manuel Gimeno Illa\n"
+"Current Author: Copyright (C) 2007 Alberto Montañola Lacort\n"
+"\n"
+"This program is free software; you can redistribute it and/or modify it "
+"under the terms of the GNU General Public License as published by the Free "
+"Software Foundation; either version 2 of the License, or (at your option) "
+"any later version.\n"
+"\n"
+"This program is distributed in the hope that it will be useful, but WITHOUT "
+"ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or "
+"FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for "
+"more details.\n"
+"\n"
+msgstr ""
+
+#: wxSudoku.py:380
+#, python-format
+msgid "About %s"
+msgstr ""
+
+#: wxSudoku.py:442
+msgid "English"
+msgstr "Anglès"
+
+#: wxSudoku.py:442
+msgid "Spanish"
+msgstr "Espanyol"
+
+#: wxSudoku.py:442
+msgid "Catalan"
+msgstr "Català"
+
+#: tkSudoku.py:234
+msgid "Load"
+msgstr "Obrir"
+
+#: tkSudoku.py:242
+msgid "Test"
+msgstr ""
+
+#: tkSudoku.py:268
 msgid "GPE files"
 msgstr "Fitxers GPE"
 
-#: tkSudoku.py:254
+#: tkSudoku.py:269
 msgid "TSudoku files"
 msgstr "Fitxers TSudoku"
 
-#: tkSudoku.py:255
+#: tkSudoku.py:270
 msgid "All Files"
 msgstr "Tots els fitxers"
 
-#: tkSudoku.py:263
+#: tkSudoku.py:278
 msgid "Invalid sudoku file"
 msgstr "Fitxers Sudoku invalid"
 
-#: tkSudoku.py:274
+#: tkSudoku.py:289
 msgid "No solution has been found."
 msgstr "No s'ha trobat cap solució"
-
