--- a/es.po
+++ b/es.po
@@ -25,145 +25,230 @@ msgid ""
 msgstr ""
 "Project-Id-Version: $Id$\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-10 00:56+0100\n"
+"POT-Creation-Date: 2007-01-14 16:01+0100\n"
 "PO-Revision-Date: 2007-01-10 01:04+0100\n"
 "Last-Translator: Alberto Montañola Lacort <alberto@almlys.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: wxSudoku.py:68
-msgid "&New..."
-msgstr "&Nuevo..."
-
-#: wxSudoku.py:68
+#: wxSudoku.py:137
 msgid "Creates a New Sudoku"
 msgstr "Crea un nuevo Sudoku"
 
-#: wxSudoku.py:73
-msgid "&Open..."
-msgstr "&Abrir..."
-
-#: wxSudoku.py:73
+#: wxSudoku.py:137
 msgid "Opens a Sudoku"
 msgstr "Abre un Sudoku"
 
-#: wxSudoku.py:82
+#: wxSudoku.py:138
 #, fuzzy
-msgid "&Exit"
-msgstr "&Salir"
+msgid "Saves a Sudoku"
+msgstr "Abre un Sudoku"
 
-#: wxSudoku.py:82
+#: wxSudoku.py:138
 msgid "The application terminates"
 msgstr "La aplicación termina"
 
-#: wxSudoku.py:87
-msgid "&File"
-msgstr "&Archivo"
-
-#: wxSudoku.py:91
-msgid "&Solve"
-msgstr "&Solucionar"
-
-#: wxSudoku.py:91
+#: wxSudoku.py:139
 msgid "Solves the Sudoku (I thought that you were smart!)"
 msgstr "Soluciona el Sudoku"
 
-#: wxSudoku.py:95
-msgid "&Undo"
-msgstr "&Deshacer"
-
-#: wxSudoku.py:95
+#: wxSudoku.py:140
 msgid "Goes back to the past, well, it undoes your latest mess"
 msgstr "Deshace la última acción"
 
-#: wxSudoku.py:101
-msgid "&Redo"
-msgstr "Rehacer"
-
-#: wxSudoku.py:101
+#: wxSudoku.py:141
 msgid "Redoes your latest undo"
 msgstr "Rehace la última acción deshecha"
 
-#: wxSudoku.py:107
-msgid "&Sudoku"
-msgstr "&Sudoku"
-
-#: wxSudoku.py:111
-msgid "&Show Hints"
-msgstr "&Mostrar Pistas"
-
-#: wxSudoku.py:111
+#: wxSudoku.py:142
 msgid "It shows you some helpful information"
 msgstr "Muestra información muy útil"
 
-#: wxSudoku.py:117
+#: wxSudoku.py:143
 #, python-format
 msgid "Changes your app language to %s"
 msgstr "Cambia la aplicación al %s"
 
-#: wxSudoku.py:121
-msgid "&Change Language"
-msgstr "&Cambia el Idioma"
-
-#: wxSudoku.py:121
+#: wxSudoku.py:144
 msgid "It allows you to change the language"
 msgstr "Te permite cambiar el idioma"
 
-#: wxSudoku.py:122
+#: wxSudoku.py:145
+msgid "Shows some documentation of how does work this thing"
+msgstr ""
+
+#: wxSudoku.py:146
+msgid "Checks if you are running the latest version"
+msgstr ""
+
+#: wxSudoku.py:147
+msgid "I need to explain what does this thing do?"
+msgstr ""
+
+#: wxSudoku.py:148
+msgid "Opens a Python Interactive console, It's that cool"
+msgstr ""
+
+#: wxSudoku.py:175
+msgid "&New..."
+msgstr "&Nuevo..."
+
+#: wxSudoku.py:180
+msgid "&Open..."
+msgstr "&Abrir..."
+
+#: wxSudoku.py:191
+#, fuzzy
+msgid "&Exit"
+msgstr "&Salir"
+
+#: wxSudoku.py:196
+msgid "&File"
+msgstr "&Archivo"
+
+#: wxSudoku.py:200
+msgid "&Solve"
+msgstr "&Solucionar"
+
+#: wxSudoku.py:206
+msgid "&Undo"
+msgstr "&Deshacer"
+
+#: wxSudoku.py:212
+msgid "&Redo"
+msgstr "Rehacer"
+
+#: wxSudoku.py:218
+msgid "&Sudoku"
+msgstr "&Sudoku"
+
+#: wxSudoku.py:222
+msgid "&Show Hints"
+msgstr "&Mostrar Pistas"
+
+#: wxSudoku.py:241
+msgid "&Change Language"
+msgstr "&Cambia el Idioma"
+
+#: wxSudoku.py:242
 msgid "&Options"
 msgstr "&Opciones"
 
-#: wxSudoku.py:133
-msgid "Are you really sure that you wish to quit?"
-msgstr "¿Estas completamente seguro que deseas salir?"
+#: wxSudoku.py:258
+msgid "&Console..."
+msgstr ""
 
-#: wxSudoku.py:133
-msgid "Are you sure?"
-msgstr "¿Está usted seguro?"
+#: wxSudoku.py:264
+msgid "&About..."
+msgstr ""
 
-#: wxSudoku.py:200
-msgid "English"
-msgstr "Inglés"
+#: wxSudoku.py:268
+msgid "&Help"
+msgstr ""
 
-#: wxSudoku.py:200
-msgid "Spanish"
-msgstr "Español"
+#: wxSudoku.py:276
+#, fuzzy
+msgid "New..."
+msgstr "&Nuevo..."
 
-#: wxSudoku.py:200
-msgid "Catalan"
-msgstr "Catalán"
+#: wxSudoku.py:278
+#, fuzzy
+msgid "Open..."
+msgstr "&Abrir..."
 
-#: tkSudoku.py:222
-msgid "Load"
-msgstr "Cargar"
-
-#: tkSudoku.py:226
+#: wxSudoku.py:283 tkSudoku.py:238
 msgid "Solve"
 msgstr "Solucionar"
 
-#: tkSudoku.py:232
+#: wxSudoku.py:286
+#, fuzzy
+msgid "Undo"
+msgstr "&Deshacer"
+
+#: wxSudoku.py:290
+#, fuzzy
+msgid "Redo"
+msgstr "Rehacer"
+
+#: wxSudoku.py:295 tkSudoku.py:249
 msgid "Show Hints"
 msgstr "Mostrar Pistas"
 
-#: tkSudoku.py:253
+#: wxSudoku.py:324
+msgid "Are you really sure that you wish to quit?"
+msgstr "¿Estas completamente seguro que deseas salir?"
+
+#: wxSudoku.py:324
+msgid "Are you sure?"
+msgstr "¿Está usted seguro?"
+
+#: wxSudoku.py:361
+#, python-format
+msgid ""
+"\n"
+"Al's WxWidgets Python Sudoku.\n"
+"Another Sudoku solver, written 100%% in Python and wxWidgets.\n"
+"\n"
+"Version: %s\n"
+"\n"
+"Original Author: Copyright (c) 2006 Juan Manuel Gimeno Illa\n"
+"Current Author: Copyright (C) 2007 Alberto Montañola Lacort\n"
+"\n"
+"This program is free software; you can redistribute it and/or modify it "
+"under the terms of the GNU General Public License as published by the Free "
+"Software Foundation; either version 2 of the License, or (at your option) "
+"any later version.\n"
+"\n"
+"This program is distributed in the hope that it will be useful, but WITHOUT "
+"ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or "
+"FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for "
+"more details.\n"
+"\n"
+msgstr ""
+
+#: wxSudoku.py:380
+#, python-format
+msgid "About %s"
+msgstr ""
+
+#: wxSudoku.py:442
+msgid "English"
+msgstr "Inglés"
+
+#: wxSudoku.py:442
+msgid "Spanish"
+msgstr "Español"
+
+#: wxSudoku.py:442
+msgid "Catalan"
+msgstr "Catalán"
+
+#: tkSudoku.py:234
+msgid "Load"
+msgstr "Cargar"
+
+#: tkSudoku.py:242
+msgid "Test"
+msgstr ""
+
+#: tkSudoku.py:268
 msgid "GPE files"
 msgstr "Ficheros GPE"
 
-#: tkSudoku.py:254
+#: tkSudoku.py:269
 msgid "TSudoku files"
 msgstr "Ficheros TSudoku"
 
-#: tkSudoku.py:255
+#: tkSudoku.py:270
 msgid "All Files"
 msgstr "Todos los ficheros"
 
-#: tkSudoku.py:263
+#: tkSudoku.py:278
 msgid "Invalid sudoku file"
 msgstr "Fichero de Sudoku no válido"
 
-#: tkSudoku.py:274
+#: tkSudoku.py:289
 msgid "No solution has been found."
 msgstr "No se ha encontrado ninguna solución"
-
