--- a/ca.po
+++ b/ca.po
@@ -25,166 +25,239 @@ msgid ""
 msgstr ""
 "Project-Id-Version: $Id$\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-14 16:01+0100\n"
-"PO-Revision-Date: 2007-01-10 01:01+0100\n"
+"POT-Creation-Date: 2007-01-24 20:07+0100\n"
+"PO-Revision-Date: 2007-01-24 19:46+0100\n"
 "Last-Translator: Alberto Montañola Lacort <alberto@almlys.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: wxSudoku.py:137
+#: wxSudoku.py:40
+#, fuzzy
+msgid ""
+"\n"
+"WxPython 2.6 or higher is required to run this application!!!\n"
+"\n"
+"You can get it from http://www.wxpython.org\n"
+"\n"
+"Or you can just type as root \"apt-get install python-wxgtk2.6\" on Debian, "
+"Ubuntu and any other Debian based distros\n"
+"On other distros you may try similar commands, yum, urpmi, emerge,..., just "
+"check your Distro documentation\n"
+"but if you don't have root access you will need to manually install wxPython "
+"in your home directory, have fun!\n"
+msgstr ""
+"\n"
+"Es requereix WxPython 2.6 o superior per poder executar l'aplicació!!!\n"
+"\n"
+"La pots obtenir de http://www.wxpython.org\n"
+"\n"
+"O pots escriure \"apt-get install python-wxgtk2.6\" com a root a Debian, "
+"Ubuntu i qualsevol altra distribució basada en Debian\n"
+"En altres distribucions pots triar comandes similars com yum, urpmi, "
+"emerge,.... Comprova la documentació de la teva distribució.\n"
+"Però si no tens accés de root, hauràs d'Instal·lar wxPython manualment al "
+"teu directori home.\n"
+
+#: wxSudoku.py:343
 msgid "Creates a New Sudoku"
 msgstr "Crea un nou Sudoku"
 
-#: wxSudoku.py:137
+#: wxSudoku.py:343
 msgid "Opens a Sudoku"
 msgstr "Obre un Sudoku"
 
-#: wxSudoku.py:138
-#, fuzzy
-msgid "Saves a Sudoku"
-msgstr "Obre un Sudoku"
+#: wxSudoku.py:344
+msgid "Opens a Sudoku from a Web server"
+msgstr "Obre un Sudoku des d'un servidor web"
 
-#: wxSudoku.py:138
+#: wxSudoku.py:345
+msgid "Saves a Sudoku"
+msgstr "Guarda un Sudoku"
+
+#: wxSudoku.py:345
 msgid "The application terminates"
 msgstr "La aplicació termina"
 
-#: wxSudoku.py:139
+#: wxSudoku.py:346
 msgid "Solves the Sudoku (I thought that you were smart!)"
 msgstr "Soluciona el Sudoku"
 
-#: wxSudoku.py:140
+#: wxSudoku.py:347
 msgid "Goes back to the past, well, it undoes your latest mess"
 msgstr "Desfà l'última acció"
 
-#: wxSudoku.py:141
+#: wxSudoku.py:348
 msgid "Redoes your latest undo"
 msgstr "Refà l'última acció desfeta"
 
-#: wxSudoku.py:142
+#: wxSudoku.py:349
 msgid "It shows you some helpful information"
 msgstr "Mostra informació molt útil"
 
-#: wxSudoku.py:143
+#: wxSudoku.py:350
 #, python-format
 msgid "Changes your app language to %s"
 msgstr "Canvia l'idioma de l'aplicació a %s"
 
-#: wxSudoku.py:144
+#: wxSudoku.py:351
 msgid "It allows you to change the language"
 msgstr "Et permet canviar l'idioma"
 
-#: wxSudoku.py:145
+#: wxSudoku.py:352
 msgid "Shows some documentation of how does work this thing"
-msgstr ""
+msgstr "Mostra documentació de com funciona aquesta cosa"
 
-#: wxSudoku.py:146
+#: wxSudoku.py:353
 msgid "Checks if you are running the latest version"
-msgstr ""
+msgstr "Comprova si esteu executant l'última versió"
 
-#: wxSudoku.py:147
+#: wxSudoku.py:354
 msgid "I need to explain what does this thing do?"
-msgstr ""
+msgstr "Necessito explicar que fa açò?"
 
-#: wxSudoku.py:148
+#: wxSudoku.py:355
 msgid "Opens a Python Interactive console, It's that cool"
-msgstr ""
+msgstr "Obre una consola Python interactiva"
 
-#: wxSudoku.py:175
+#: wxSudoku.py:389
 msgid "&New..."
 msgstr "&Nou..."
 
-#: wxSudoku.py:180
+#: wxSudoku.py:394
 msgid "&Open..."
 msgstr "&Obrir..."
 
-#: wxSudoku.py:191
-#, fuzzy
-msgid "&Exit"
-msgstr "&Sortir"
+#: wxSudoku.py:399
+msgid "&Open URL..."
+msgstr "&Obrir adreça..."
 
-#: wxSudoku.py:196
+#: wxSudoku.py:411
+msgid "&Exit"
+msgstr "Sortir"
+
+#: wxSudoku.py:416
 msgid "&File"
 msgstr "&Fitxer"
 
-#: wxSudoku.py:200
+#: wxSudoku.py:420
 msgid "&Solve"
 msgstr "&Solucionar"
 
-#: wxSudoku.py:206
+#: wxSudoku.py:426
 msgid "&Undo"
 msgstr "&Desfer"
 
-#: wxSudoku.py:212
+#: wxSudoku.py:432
 msgid "&Redo"
 msgstr "&Refer"
 
-#: wxSudoku.py:218
+#: wxSudoku.py:438
 msgid "&Sudoku"
 msgstr "&Sudoku"
 
-#: wxSudoku.py:222
+#: wxSudoku.py:442
 msgid "&Show Hints"
 msgstr "&Mostrar pistes"
 
-#: wxSudoku.py:241
+#: wxSudoku.py:461
 msgid "&Change Language"
 msgstr "&Canviar Idioma"
 
-#: wxSudoku.py:242
+#: wxSudoku.py:462
 msgid "&Options"
 msgstr "&Opcions"
 
-#: wxSudoku.py:258
+#: wxSudoku.py:478
 msgid "&Console..."
-msgstr ""
+msgstr "&Consola..."
 
-#: wxSudoku.py:264
+#: wxSudoku.py:484
 msgid "&About..."
-msgstr ""
+msgstr "&Sobre..."
 
-#: wxSudoku.py:268
+#: wxSudoku.py:488
 msgid "&Help"
-msgstr ""
+msgstr "&Ajuda"
 
-#: wxSudoku.py:276
-#, fuzzy
+#: wxSudoku.py:498 tkSudoku.py:261
 msgid "New..."
-msgstr "&Nou..."
+msgstr "Nou"
 
-#: wxSudoku.py:278
-#, fuzzy
+#: wxSudoku.py:500 tkSudoku.py:262
 msgid "Open..."
-msgstr "&Obrir..."
+msgstr "Obrir"
 
-#: wxSudoku.py:283 tkSudoku.py:238
+#: wxSudoku.py:505 tkSudoku.py:269 tkSudoku.py:312
 msgid "Solve"
 msgstr "Solucionar"
 
-#: wxSudoku.py:286
-#, fuzzy
+#: wxSudoku.py:508 tkSudoku.py:271
 msgid "Undo"
-msgstr "&Desfer"
+msgstr "Desfer"
 
-#: wxSudoku.py:290
-#, fuzzy
+#: wxSudoku.py:512 tkSudoku.py:272
 msgid "Redo"
-msgstr "&Refer"
+msgstr "Refer"
 
-#: wxSudoku.py:295 tkSudoku.py:249
+#: wxSudoku.py:517 tkSudoku.py:276 tkSudoku.py:316
 msgid "Show Hints"
 msgstr "Mostrar pistes"
 
-#: wxSudoku.py:324
+#: wxSudoku.py:550
 msgid "Are you really sure that you wish to quit?"
 msgstr "Esteu completament segurs de que voleu sortir?"
 
-#: wxSudoku.py:324
+#: wxSudoku.py:550
 msgid "Are you sure?"
 msgstr "Esteu segur de la seva decisió?"
 
-#: wxSudoku.py:361
+#: wxSudoku.py:564 tkSudoku.py:348
+msgid "GPE files"
+msgstr "Fitxers GPE"
+
+#: wxSudoku.py:565 tkSudoku.py:349
+msgid "TSudoku files"
+msgstr "Fitxers TSudoku"
+
+#: wxSudoku.py:566 tkSudoku.py:350
+msgid "All Files"
+msgstr "Tots els fitxers"
+
+#: wxSudoku.py:574 wxSudoku.py:596 tkSudoku.py:358
+msgid "Invalid sudoku file"
+msgstr "Fitxers Sudoku invalid"
+
+#: wxSudoku.py:580
+msgid "Enter the URL"
+msgstr "Entra l'adreça URL"
+
+#: wxSudoku.py:599
+#, fuzzy, python-format
+msgid ""
+"The server said:\n"
+"%s\n"
+"Requesting the %s resource"
+msgstr ""
+"El servidor ha dit:\n"
+"%s\n"
+"Demanant el recurs %s"
+
+#: wxSudoku.py:600
+msgid "Remote server error"
+msgstr "Error remot del servidor"
+
+#: wxSudoku.py:603
+#, fuzzy, python-format
+msgid "Cannot open %s, reason %s"
+msgstr "No puc obrir %s, raó %s"
+
+#: wxSudoku.py:610 tkSudoku.py:372
+msgid "No solution has been found."
+msgstr "No s'ha trobat cap solució"
+
+#: wxSudoku.py:641
 #, python-format
 msgid ""
 "\n"
@@ -207,48 +280,70 @@ msgid ""
 "more details.\n"
 "\n"
 msgstr ""
+"\n"
+"Al's WxWidgets Python Sudoku.\n"
+"Un altre solver de Sudoku, escrit 100%% en Python i wxWidgets.\n"
+"\n"
+"Versió: %s\n"
+"\n"
+"Autor Original: Copyright (c) 2006 Juan Manuel Gimeno Illa\n"
+"Autor Actual: Copyright (C) 2007 Alberto Montañola Lacort\n"
+"\n"
+"This program is free software; you can redistribute it and/or modify it "
+"under the terms of the GNU General Public License as published by the Free "
+"Software Foundation; either version 2 of the License, or (at your option) "
+"any later version.\n"
+"\n"
+"This program is distributed in the hope that it will be useful, but WITHOUT "
+"ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or "
+"FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for "
+"more details.\n"
+"\n"
 
-#: wxSudoku.py:380
+#: wxSudoku.py:660
 #, python-format
 msgid "About %s"
-msgstr ""
+msgstr "Sobre %s"
 
-#: wxSudoku.py:442
-msgid "English"
-msgstr "Anglès"
+#: tkSudoku.py:260
+msgid "File"
+msgstr "Fitxer"
 
-#: wxSudoku.py:442
-msgid "Spanish"
-msgstr "Espanyol"
+#: tkSudoku.py:263
+msgid "Open URL..."
+msgstr "Obrir adreça..."
 
-#: wxSudoku.py:442
-msgid "Catalan"
-msgstr "Català"
+#: tkSudoku.py:265
+msgid "Exit"
+msgstr "Sortir"
 
-#: tkSudoku.py:234
+#: tkSudoku.py:268
+msgid "Sudoku"
+msgstr "Sudoku"
+
+#: tkSudoku.py:275
+msgid "Options"
+msgstr "Opcions"
+
+#: tkSudoku.py:279
+msgid "Change Language"
+msgstr "Canviar Idioma"
+
+#: tkSudoku.py:308
 msgid "Load"
 msgstr "Obrir"
 
-#: tkSudoku.py:242
-msgid "Test"
-msgstr ""
+#: BaseApp.py:107
+msgid "English"
+msgstr "Anglès"
 
-#: tkSudoku.py:268
-msgid "GPE files"
-msgstr "Fitxers GPE"
+#: BaseApp.py:107
+msgid "Spanish"
+msgstr "Espanyol"
 
-#: tkSudoku.py:269
-msgid "TSudoku files"
-msgstr "Fitxers TSudoku"
+#: BaseApp.py:107
+msgid "Catalan"
+msgstr "Català"
 
-#: tkSudoku.py:270
-msgid "All Files"
-msgstr "Tots els fitxers"
-
-#: tkSudoku.py:278
-msgid "Invalid sudoku file"
-msgstr "Fitxers Sudoku invalid"
-
-#: tkSudoku.py:289
-msgid "No solution has been found."
-msgstr "No s'ha trobat cap solució"
+#~ msgid "Test"
+#~ msgstr "Prova?"
